image name changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1>Hi! I am M Jawad Ali</h1>
     <h3>BSCS || FAST NUCES Islamabad</h3>
-    <img src="Untitled design (10).png" alt="Jawad" height="200px">
+    <img src="dp.png" alt="Jawad" height="200px">
     <h3>Education</h3>
     <ul>
         <li>Olevels</li>
