--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Muhammad Jawad Ali | Software Engineer Fellow @Headstarter AI. Computer Science student at FAST NUCES Islamabad. Passionate about AI, game development, and gardening.">
     <meta property="og:image" content="web view.jpg">
     <meta property="og:image:width" content="1200">
@@ -24,7 +25,7 @@
     <link rel="stylesheet" href="styles.css">
     <script type="application/ld+json">
     {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "Person",
         "name": "Muhammad Jawad Ali",
         "jobTitle": "Software Engineer Fellow",
